[gd_scene load_steps=15 format=2]

[ext_resource path="res://actors/shared/FlashManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/shared/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/enemies/sluggish_failure/sluggish_failure.gd" type="Script" id=4]
[ext_resource path="res://actors/enemies/sluggish_failure/states/walk.gd" type="Script" id=5]
[ext_resource path="res://actors/enemies/sluggish_failure/textures/sluggish-failure.png" type="Texture" id=6]
[ext_resource path="res://actors/enemies/sluggish_failure/states/return_to_ledge.gd" type="Script" id=7]
[ext_resource path="res://actors/enemies/sluggish_failure/states/stagger.gd" type="Script" id=8]
[ext_resource path="res://actors/enemies/sluggish_failure/states/fall.gd" type="Script" id=9]
[ext_resource path="res://actors/shared/physics_managers/PhysicsManager.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/shared/physics_managers/grounded_physics_manager.gd" type="Script" id=11]
[ext_resource path="res://actors/enemies/sluggish_failure/states/die.gd" type="Script" id=12]
[ext_resource path="res://actors/enemies/PushbackManager.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6 )

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="SluggishFailure" type="KinematicBody2D" groups=[
"lamp_reset",
]]
collision_layer = 2
collision_mask = 516
script = ExtResource( 4 )

[node name="Health" parent="." instance=ExtResource( 2 )]
MAX_HEALTH = 3

[node name="FlashManager" parent="." instance=ExtResource( 1 )]
sprite_path = NodePath("../Sprite")
total_duration = 0.3
single_flash_duration = 0.075
flash_color = Color( 10, 10, 10, 1 )

[node name="PhysicsManager" parent="." instance=ExtResource( 10 )]
script = ExtResource( 11 )
movement_speed_tiles_per_second = 0.25

[node name="PushbackManager" parent="." instance=ExtResource( 13 )]
pushback_distance_tiles = 0.5
pushback_duration = 0.15

[node name="States" type="Node" parent="."]

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Stagger" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="Fall" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="ReturnToLedge" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Die" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 6 )
hframes = 8
region_enabled = true
region_rect = Rect2( 0, 0, 128, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 272

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="LedgeDetectorRaycasts" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="LedgeDetectorRaycasts"]
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4

[node name="Right" type="RayCast2D" parent="LedgeDetectorRaycasts"]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 4
